--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /* Base styles for the entire application */
 body {
+    background-image: url(../images/backphoto.jpg);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
     color: #333;
